# modsim_ub3

./: .gitignore  CMakeLists.txt  Makefile  ausgleichsproblem  ausgleichsproblem.c  gauss.c  gsl-ausgleichsproblem.c  gsl_bsp.c  log.txt  matrix-multi-snippet.c  test.c
