cmake_minimum_required(VERSION 3.10)
project(modsim_ub3)

find_package(GSL REQUIRED)
# add_executable(gsl-ausgleichsproblem  gsl-ausgleichsproblem.c)
add_executable(ausgleichsproblem ausgleichsproblem.c)
add_executable(gauss gauss.c)
add_executable(gsl_bsp gsl_bsp.c)
include_directories(/usr/local/include)
target_link_libraries(ausgleichsproblem GSL::gsl GSL::gslcblas)
target_link_libraries(gsl_bsp GSL::gsl GSL::gslcblas)
